--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "version":"1.1",
+  "manifest_version":2,
   "name":"Adwaita (GNOME 3)",
   "description":"Make Chrome fit in with GNOME 3's new look!\n\nThis theme is compatible with \"System Title Bar & Borders\" & Chrome's managed window.",
   "icons": { "128": "icon-128.png" },
